# physics-aware-hydraulic-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: sample_request.json
src/: ingest.py  serve.py
tests/: test_features.py  test_ingest.py  test_serve.py  test_train.py
waterops/: features.py  train.py
